welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:15: error: type YELLOW is not a member of object java.awt.Color
setCouleurBrosse(c : Color.YELLOW)
                           ^FlowerPot:15: error: not found: value c
setCouleurBrosse(c : Color.YELLOW)
                 ^FlowerPot:20: error: type YELLOW is not a member of object java.awt.Color
setCouleurBrosse(c : Color.YELLOW)
                           ^FlowerPot:20: error: not found: value c
setCouleurBrosse(c : Color.YELLOW)
                 ^